fix: Reposition background images to get rid of the gaps

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -1,6 +1,7 @@
 .img-bank-wrapper {
 	position: relative;
 	display: flex;
+	z-index: 1;
 }
 .feat-about {
 	border-radius: 5px;
@@ -11,7 +12,7 @@
 	width: 90vw;
   }
 .feat-about:hover {
-box-shadow: none;
+	box-shadow: none;
 }
 h3 {
 	position: absolute;
